# harddots

./: AGENTS.md  Cargo.toml  README.md  design_final.md  harddots.toml  mise.toml  review_board.py
repo/manifests/: dev-env.toml
repo/nodes/: dev.toml
repo/templates/fish/: config.fish.j2
repo/templates/starship/: starship.toml
repo/templates/tmux/: tmux.conf.j2
src/: clap_complete.rs  config.rs  error.rs  filesystem.rs  git.rs  host.rs  main.rs  package.rs
src/commands/: add.rs  deploy.rs  init.rs  mod.rs  remove.rs
