[package]
name = "harddots"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5", features = ["zsh", "bash", "fish"] }
os-release = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
shellexpand = { version = "3.0" }
thiserror = { version = "2.0" }
toml = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
] }
which = { version = "7.0" }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[profile.release]
codegen-units = 1           # reduces binary size
debug = "full"              # debuggable release binary
lto = true                  # reduces binary size
opt-level = "s"             # reduces binary size 
panic = "abort"             # reduces binary size
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - reduces binary size
incremental = true          # Improves re-compile times

[profile.bench]
codegen-units = 16          # Make compiling criterion faster
lto = "thin"  


